# ev

./: .gitignore  README.md  pyproject.toml
docs/: cluster.md  ribotac_extraction_plan.md
docs/targets/: fmn_riboswitch.md  hiv1_tar.md  pre_miR_21.md
src/boltzrna_diff/: __init__.py  cli.py
src/boltzrna_diff/data/: benchmark.py  hariboss.py  rbind.py  rnamigos2.py  robin.py  schema.py  smrtnet.py  splits.py
src/boltzrna_diff/teachers/: __init__.py  boltz.py  rhofold.py  types.py
tests/: test_rnamigos2.py  test_robin.py  test_schema.py  test_smrtnet.py  test_splits.py  test_teachers.py
