[project]
name = "boltzrna-diff"
version = "0.1.0"
description = "Cofolding-distilled, conformation-aware generative design for RNA-targeted small molecules and RIBOTACs."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "lin (cooper)", email = "cooper98@nwfsc.edu" },
    { name = "Devin", email = "devin@cognition.ai" },
]
requires-python = ">=3.11,<3.13"

# Core deps that work CPU-only (data, schema, evaluation, plotting).
# GPU-only deps (torch, e3nn, PyG, OpenMM, Boltz, AF3) live in the
# `gpu` and `boltz` optional groups so that this project still
# installs on a workstation / CI without CUDA.
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow>=16.0",
    "polars>=1.0",
    "rdkit>=2024.3.1",
    "biopython>=1.83",
    "biotite>=0.41",
    "tqdm>=4.66",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "pydantic>=2.7",
    "rich>=13.7",
    "loguru>=0.7",
    "scikit-learn>=1.5",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "requests>=2.32",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "click>=8.1",
]

[project.optional-dependencies]
# GPU-flavored deps. Install on training / inference machines:
#   uv pip install -e '.[gpu]'
# NOTE: heavy CUDA-only packages (boltz, AF3 inference, openmm, openff-toolkit)
# are NOT in pyproject.toml because they have native/conda-only dependencies
# that break uv resolution on a CPU-only box. They live in
# `docs/cluster.md` with explicit conda + pip install commands instead.
gpu = [
    "torch>=2.3",
    "e3nn>=0.5",
    "torch-geometric>=2.5",
    "lightning>=2.3",
    "wandb>=0.17",
]
# Dev tooling.
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "ipython>=8.25",
    "jupyterlab>=4.2",
]

[project.scripts]
boltzrna-diff = "boltzrna_diff.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "C4", "TID"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
